
syntax = "proto3";
package Cocopops.Model;
option csharp_namespace = "Cocopops.Model.ExtendedTransaction";

import "BaseTransaction.proto";

message ExtendedTransaction {
	Cocopops.Model.BaseTransaction base_transaction = 1;
	string comments = 2;
	string extra = 3;
}
